--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuppon</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c648a843cd.js" crossorigin="anonymous"></script>
+  </head>
 <body>
+  <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-success navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand px-5" href="#"><img src="/assets/img/logo-white.png" alt="cine"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,22 +31,126 @@
           </div>
         </div>
       </nav>
-     <div>
-        cards
-    </div>
-    <div>
-        <p class="text-center">Recibe cupones en tu correo</p></div>
-    <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-      </div>
-      <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-      </div>
-    </div>
-<footer>foter</footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/cine.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Como Pareja: Entradas 2D + Bebidas + PopCorn</h5>
+                    <p class="card-text">CineHoyts</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> Av. Ossa 655, La Reina, Región Metropolitana
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$4.200</span>
+                      <h5 class="text-success d-inline ms-3">$3.200</h5>
+                  </div>
+                </div>
+            </div>
+          </div>       
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/zoo.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Entrada para Buin Zoo para Adulto Sabado y Domingo</h5>
+                    <p class="card-text">Buin Zoo</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> Ruta 5 sur kilómetro 32 Camino longitudinal sur 01730 Buin
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$11.500</span>
+                      <h5 class="text-success d-inline ms-3">$8.200</h5>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/vuelo.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Vuelo en Parapente, Fotografía, video en Centro de vuelo de Las Vizcachas con Chileparapente.</h5>
+                    <p class="card-text">Chile Parapente</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> Av. Vitacura 5544, las Condes
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$4.200</span>
+                      <h5 class="text-success d-inline ms-3">$3.200</h5>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/teleferico.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Teleférico Santiago - Turistik ¡Vive el Parque! Oferta Especial por Persona</h5>
+                    <p class="card-text">Turistik</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> Avenida El Cerro 750, Santiago 
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$4.200</span>
+                      <h5 class="text-success d-inline ms-3">$3.200</h5>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/resort.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Siempre un buen momento para escapar! Resort Riu-Tai, El Quisco: Hasta 5 noches + desayuno</h5>
+                    <p class="card-text">Resort Riu-Tai</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> Avda. Isidoro Dubournais 1571, El Quisco
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$70.000</span>
+                      <h5 class="text-success d-inline ms-3">$45.000</h5>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
+            <div class="card mx-auto my-4">
+              <img src="/assets/img/lipolaser.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">12 Ses Lipolaser + Ondas rusas para 1 o 2 zonas a elección en Kine Life Health.</h5>
+                    <p class="card-text">Kine Life Health</p>
+                    <p class="card-text">
+                        <i class="fa-solid fa-location-dot"></i> 1674.9 km, Providencia
+                    </p>
+                  <hr>
+                  <div class="text-end">
+                    <span class="fw-light">$4.200</span>
+                      <h5 class="text-success d-inline ms-3">$3.200</h5>
+                  </div>
+                </div>
+            </div>
+          </div>       
+        </div>   
+        <form class="bg-success text-white text-center py-4"> 
+            <div class="container">
+              <h4>Recibe cupones en tu correo</h4>
+              <input type="text" class="form-control mt-3" placeholder="Nombre">
+              <input type="email" class="form-control mt-3" placeholder="Correo Electronico">
+              <button type="button" class="btn btn-light mt-3 fw-bold">Enviar</button>
+
+            </div> 
+        </form>      
+          <footer class="text-center">
+            <img src="/assets/img/logo-black.png" alt="" class="mt-3">
+            <p class="text-secondary">© 2018 Cuppon Latam. Todos los derechos reservados.</p>
+            </footer>
+  </div>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
