Se modifica ruta img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-success navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand px-5" href="#"><img src="/assets/img/logo-white.png" alt="cine"></a>
+          <a class="navbar-brand px-5" href="#"><img src="assets/img/logo-white.png" alt="cine"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/cine.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/cine.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Como Pareja: Entradas 2D + Bebidas + PopCorn</h5>
                     <p class="card-text">CineHoyts</p>
@@ -52,7 +52,7 @@
           </div>       
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/zoo.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/zoo.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Entrada para Buin Zoo para Adulto Sabado y Domingo</h5>
                     <p class="card-text">Buin Zoo</p>
@@ -69,7 +69,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/vuelo.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/vuelo.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Vuelo en Parapente, Fotografía, video en Centro de vuelo de Las Vizcachas con Chileparapente.</h5>
                     <p class="card-text">Chile Parapente</p>
@@ -86,7 +86,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/teleferico.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/teleferico.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Teleférico Santiago - Turistik ¡Vive el Parque! Oferta Especial por Persona</h5>
                     <p class="card-text">Turistik</p>
@@ -103,7 +103,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/resort.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/resort.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Siempre un buen momento para escapar! Resort Riu-Tai, El Quisco: Hasta 5 noches + desayuno</h5>
                     <p class="card-text">Resort Riu-Tai</p>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="/assets/img/lipolaser.jpg" class="card-img-top" alt="...">
+              <img src="Cuppon/assets/img/lipolaser.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">12 Ses Lipolaser + Ondas rusas para 1 o 2 zonas a elección en Kine Life Health.</h5>
                     <p class="card-text">Kine Life Health</p>
@@ -146,7 +146,7 @@
             </div> 
         </form>      
           <footer class="text-center">
-            <img src="/assets/img/logo-black.png" alt="" class="mt-3">
+            <img src="Cuppon/assets/img/logo-black.png" alt="" class="mt-3">
             <p class="text-secondary">© 2018 Cuppon Latam. Todos los derechos reservados.</p>
             </footer>
   </div>
