--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c648a843cd.js" crossorigin="anonymous"></script>
   </head>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
             <div class="card mx-auto my-4">
-              <img src="Cuppon/assets/img/lipolaser.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/lipolaser.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">12 Ses Lipolaser + Ondas rusas para 1 o 2 zonas a elección en Kine Life Health.</h5>
                     <p class="card-text">Kine Life Health</p>
@@ -146,7 +146,7 @@
             </div> 
         </form>      
           <footer class="text-center">
-            <img src="/Cuppon/assets/img/logo-black.png" alt="" class="mt-3">
+            <img src="assets/img/logo-black.png" alt="" class="mt-3">
             <p class="text-secondary">© 2018 Cuppon Latam. Todos los derechos reservados.</p>
             </footer>
   </div>
